Revert "fix(k8s-error-logs): addiing more logs if kubernetes API return Forbidden error"
This reverts commit cb28b8212a0abd4f62e81151e6fe1dc9ea7e733d.