@@ -21,6 +21,7 @@ import com.hazelcast.internal.serialization.InternalSerializationService;
 import com.hazelcast.test.HazelcastParallelClassRunner;
 import com.hazelcast.test.annotation.ParallelJVMTest;
 import com.hazelcast.test.annotation.QuickTest;
+import org.apache.commons.io.IOUtils;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
@@ -94,7 +95,7 @@ public class CompatibilitySerializationServiceTest {
         try (InputStream is = new FileInputStream(useBigEndian
                 ? "src/test/resources/testHz3Object"
                 : "src/test/resources/testHz3ObjectLittleEndian")) {
-            byte[] payload = is.readAllBytes();
+            byte[] payload = IOUtils.toByteArray(is);
             return new HeapData(payload);
         }
     }
