@@ -20,6 +20,7 @@ import com.hazelcast.test.HazelcastSerialClassRunner;
 import com.hazelcast.test.JarUtil;
 import com.hazelcast.test.annotation.ParallelJVMTest;
 import com.hazelcast.test.annotation.QuickTest;
+import org.apache.commons.io.IOUtils;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
@@ -86,15 +87,9 @@ public class ChildFirstClassLoaderTest {
 
     @Test
     public void urlsMustNotBeNullNorEmpty() {
-        assertThatThrownBy(() -> {
-            try (ChildFirstClassLoader ignored = new ChildFirstClassLoader(null, ClassLoader.getSystemClassLoader())) {
-            }
-        })
+        assertThatThrownBy(() -> new ChildFirstClassLoader(null, ClassLoader.getSystemClassLoader()))
                 .isInstanceOf(NullPointerException.class);
-        assertThatThrownBy(() -> {
-            try (ChildFirstClassLoader ignored = new ChildFirstClassLoader(new URL[0], ClassLoader.getSystemClassLoader())) {
-            }
-        })
+        assertThatThrownBy(() -> new ChildFirstClassLoader(new URL[0], ClassLoader.getSystemClassLoader()))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -253,7 +248,7 @@ public class ChildFirstClassLoaderTest {
                 throw new IllegalArgumentException("Resource with name " + name +
                         " could not be found in classloader " + cl);
             }
-            return new String(is.readAllBytes(), UTF_8);
+            return IOUtils.toString(is, UTF_8);
         }
     }
 }
